Fix Highlight buttons not being displayed properly on mobile view and breaking the design.

--- a/resource/css/main.css
+++ b/resource/css/main.css
@@ -119,9 +119,12 @@ div#vh-healing-text {
 .vvp-container-right-align {
 	flex-flow: row wrap;
 }
+.vvp-items-button-and-search-container {
+	margin: 0px !important;
+}
 div#bookmark {
+	margin: 0px;
 	margin-top: 10px;
-	flex-basis: 100%;
 	text-align: left;
 }
 
